style: improve img sizes in nav & hero section

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="/" aria-label="Inicio">
-          <img src="{% static 'images/logo-jfgc.png' %}"
+          <img src="{% static 'images/logo-nav.webp' %}"
               alt="José Félix · Dev"
               class="brand-logo align-text-top">
         </a>
