refactor: prep Railway deploy; env settings + static -

--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Proyectos - Portfolio{% endblock %}
+{% block title %}Proyectos - JFGC ⇒ Dev{% endblock %}
 
 {% block content %}
 <div class="container">
