--- a/services/templates/services/service_list.html
+++ b/services/templates/services/service_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Servicios Profesionales{% endblock %}
+{% block title %}Servicios - JFGC ⇒ Dev{% endblock %}
 
 {% block content %}
 {% load static %}
