--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Inicio - Plataforma{% endblock %}
+{% block title %}Inicio - JFGC ⇒ Dev{% endblock %}
 
 {% block content %}
 <div class="container my-5">
