--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,39 +1,36 @@
 {% extends 'base.html' %}
 
-{% block title %}Blog - Portfolio{% endblock %}
-<!-- Extiende la plantilla base y define el título de la página como "Blog - Portfolio". -->
+{% block title %}Blog -  JFGC ⇒ Dev{% endblock %}
 
 {% block content %}
 <div class="container">
-    <!-- Encabezado principal de la página -->
+    <!-- Header -->
     <h1 class="mb-5 text-center display-4">Últimos Artículos</h1>
     <div class="row g-4">
-        <!-- Iteración sobre la lista de posts -->
+        <!-- Post list -->
         {% for post in posts %}
         <div class="col-md-4">
             <div class="card blog-card h-100 shadow-sm border-0">
-                <!-- Imagen de la tarjeta -->
                 {% if post.image %}
                     <img src="{{ post.image.url }}" class="card-img-top rounded-top" alt="{{ post.title }}">
                 {% endif %}
                 <div class="card-body d-flex flex-column">
-                    <!-- Título del post con un enlace a su detalle -->
                     <h5 class="card-title mb-3">
                         <a href="{% url 'post_detail' post.id %}" class="stretched-link text-decoration-none text-primary">
                             {{ post.title }}
                         </a>
                     </h5>
-                    <!-- Breve descripción del post, limit 100 caracteres -->
+                    <!-- Brief description - max 100 chr -->
                     <p class="card-text text-muted small">{{ post.content|striptags|truncatechars:100 }}</p>
                 </div>
-                <!-- Fecha de publicación -->
+                <!-- Post date -->
                 <div class="card-footer text-muted small">
                     Publicado el {{ post.created_at|date:"d M Y" }}
                 </div>
             </div>
         </div>
         {% endfor %}
-        <!-- Si no hay posts, no mostrará nada -->
+
     </div>    
 </div>
 {% endblock %}
